--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,9 @@
 development:
   adapter: postgresql
   database: dbc_overflow_development
+  username: apprentice
 
 test:
   adapter: postgresql
   database: dbc_overflow_test
+  username: apprentice
